# machine-learning-engineering-for-production

./: .gitignore  README.md
course1/week1-ungraded-lab/: client.py  pyproject.toml  server.py
course1/week2-ungraded-lab/: C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
